Details View added for both modes, "tablet and smartphone". GetDetails Task for notes done. Added Sort Options in menu.
TODO:
I have to control configuration changes , for activities and tasks.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">BQEvernote</string>
+
+    <string name="login">Login</string>
+    <string name="sort">Sort</string>
+    <string name="view">View</string>
 </resources>
